# vulkanite

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
include/vulkanite/window/: configuration.hpp
source/include/vulkanite/window/: subsystem.hpp  window.hpp
source/window/: subsystem.cpp  window.cpp
tests/basic/: CMakeLists.txt  CMakePresets.json
tests/basic/source/: main.cpp
vulkanite/detail/: subsystem.inl  window.inl
vulkanite/macros/: cppstd.hpp
vulkanite/renderer/: allocator.hpp  buffer.hpp  command_buffer.hpp  command_pool.hpp  configuration.hpp  device.hpp  fence.hpp  framebuffer.hpp  image.hpp  image_view.hpp  instance.hpp  pipeline.hpp  queue.hpp  render_pass.hpp  renderer.hpp  sampler.hpp  semaphore.hpp  shader_module.hpp  surface.hpp  swapchain.hpp
vulkanite/renderer/detail/: allocator.inl  buffer.inl  command_buffer.inl  command_pool.inl  configuration.inl  device.inl  fence.inl  framebuffer.inl  image.inl  image_view.inl  instance.inl  pipeline.inl  queue.inl  render_pass.inl  sampler.inl  semaphore.inl  shader_module.inl  surface.inl  swapchain.inl
vulkanite/window/: subsystem.hpp  window.hpp
vulkanite/window/detail/: subsystem.inl  window.inl
